Fix program text align

--- a/Styles/mainMobile.css
+++ b/Styles/mainMobile.css
@@ -89,6 +89,7 @@ header {
   flex: 1 1 0;
   font-size: 1rem;
   align-items: center;
+  text-align: center;
   justify-content: space-evenly;
   gap: 10px;
   background-color: #ffffff26;
